# RavensOne

./: CHANGELOG.md  Cargo.toml  SPRINT3_FINDINGS.md  demo-chat-server.js  demo-compiler.html  demo-counter.html  demo-hmr.html  demo-wasm.html  install.cmd  rename_language.sh  rename_text_content.sh  test-wasm.html  test_arithmetic.jnc  test_closure_complex.jnc  test_closure_prefix.jnc  test_const_import.jnc  test_ecommerce_pattern.jnc  test_feature_collections.jnc  test_feature_control_flow.jnc  test_feature_functions.jnc  test_feature_macros.jnc  test_feature_strings.jnc  test_for_range.jnc  test_if_else_bug.jnc  test_if_else_simple.jnc  test_jsx_and_operator.jnc  test_logical_ops.jnc  test_namespace_const.jnc  test_ternary_jsx_block.jnc  test_ternary_let_block.jnc  test_tuple_destructure.jnc  test_wildcard_import.jnc
archive/: DOCUMENTATION_AUDIT_SUMMARY.md  MISSION.md  PROJECT_TRACKING.md  README.md  ROADMAP_Q1_2026.md  STATUS.txt
docs-site/: DEPLOYMENT.md  Dockerfile  README.md  build.js  fly.toml  index.html  nginx.conf
docs-site/css/: docs.css  style.css
docs-site/js/: main.js
docs-site/pages/: docs.html  examples.html  getting-started.html  packages.html
docs-site/public/: api-reference.html  getting-started.html  index.html  tutorials.html
src/: semantic_analyzer.rs
test/features/: test_error.jnc  test_indirect_call.jnc  test_indirect_simple.jnc  test_nofunction.jnc  test_simple_no_indirect.jnc
test/legacy/: test-jsx.jnc  test-minimal.jnc  test-simple.jnc
vscode-jnc/: README.md  package-lock.json  package.json  tsconfig.json
(+3 files in other folders)
