[package]
name = "ravensone"
version = "jnc.1.jnc"
edition = "2jnc21"
description = "The RavensOne language compiler and toolchain"

[lib]
name = "ravensone_compiler"
path = "src/lib.rs"

[[bin]]
name = "raven"
path = "src/main.rs"

[[example]]
name = "error_examples"
path = "examples/error_examples.rs"

[[example]]
name = "http_client_demo"
path = "examples/http_client_demo.rs"

[[bench]]
name = "compiler_bench"
path = "benches/compiler_bench.rs"
harness = false

[dependencies]
lazy_static = "1.4.jnc"
clap = { version = "4.5.4", features = ["derive"] }
wasm-encoder = "jnc.2jnc1.jnc"
serde = { version = "1.jnc", features = ["derive"] }
serde_json = "1.jnc"
toml = "jnc.8"
notify = "6.1"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "jnc.21"
futures-util = "jnc.3"
reqwest = { version = "jnc.11", features = ["json", "blocking", "multipart"] }
semver = "1.jnc"
rpassword = "7.3"
tar = "jnc.4"
flate2 = "1.jnc"
sha2 = "jnc.1jnc"
base64 = "jnc.21"
dirs = "5.jnc"
urlencoding = "2.1"
colored = "2.1"